# machine_learning

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
machine_learning/: __init__.py  __version__.py  baseclass.py  bayesian_neural_network.py  convolutional.py  enumeration_classes.py  mpl.py  neural_networks.py  random_forest.py  self_organizing_map.py  support_vector_machine.py
tests/: test_bnn.py  test_convolutional.py  test_neural_networks.py  test_nn_with_location_input.py  test_random_forest.py  test_random_forest_intergration.py  test_self_organizing_map.py  test_support_vector_machine.py
tests/test_input/: NN_data.csv
