[metadata]
name = machine_learning
version = attr: machine_learning.__version__
author = attr: machine_learning.__author__
description = machine learning of the datafusiontools package
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages =
    machine_learning
include_package_data = True
install_requires =
    numpy>=1.22
    matplotlib>=3.5
    scipy>=1.11.3
    tensorflow>=2.14.0
    shap>=0.42.1
    scikit-image>=0.22.0
    altair>=5.1.2
    tensorflow-probability[tf]>=0.22.0
    sompy @ git+https://github.com/sevamoo/SOMPY
    core @ git+https://github.com/DataFusionTools/core
    spatial_utils @ git+https://github.com/DataFusionTools/spatial_utils
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2
